# Lapis

./: CMakeLists.txt
include/: gem_base.h  lapis.h  lapis_buttons.h  lapis_common.h  lapis_defines.h
include/Lapis/: gem_base.h  lapis.h  lapis_defines.h
include/events/: buttons.h  event.h  event_input.h  event_window.h
include/window/: window.h  window.inl  window_win32.inl
src/: buttons_win32.inl  common.h  console_win32.c  defines.h  files_win32.c  input.c  internal.h  lapis.c  lapis.cpp  memory_win32.c  window.c  window_linux.c  window_win32.c
src/window/: keycodes_win32.inl  window_win32.c  window_win32.cpp
